--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,10 @@
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+<html>
+  <head>
+    <title>Angular App</title>
+  </head>
+  <body>
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
 
 <my-app>loading</my-app>
+  </body>
+</html>
